--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
               <span> PHARRELLWILLIAMS.com</span>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-            <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"  >
+            <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"   alt="hhh">
             
         <!-- span text 'COLUMBIARECORDS.COM' -->
                     <span>COLUMBIARECORDS.COM</span>
